tests/integration/ambient/testdata/automtls-partial-sidecar-dr-disable.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: "default"
  annotations:
    test-suite: "automtls-partial-dr-disable"
spec:
  mtls:
    mode: STRICT
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: "multiversion-route"
  annotations:
    test-suite: "automtls-partial-dr-disable"
spec:
  hosts:
    - "multiversion"
  http:
    - name: "vistio-route"
      match:
        - uri:
            prefix: "/vistio"
      route:
        - destination:
            host: "multiversion"
            subset: "vistio"
    - name: "legacy-by-default"
      route:
        - destination:
            host: "multiversion"
            subset: "vlegacy"
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: "multiversion"
  annotations:
    test-suite: "automtls-partial-dr-disable"
spec:
  host: "multiversion"
  subsets:
    - name: "vistio"
      labels:
        version: "vistio"
      trafficPolicy:
        tls:
          mode: DISABLE
    - name: "vlegacy"
      labels:
        version: "vlegacy"
      trafficPolicy:
        tls:
          mode: DISABLE
  trafficPolicy:
    tls:
      mode: DISABLE
