tests/integration/ambient/testdata/bad-filter.yaml
apiVersion: extensions.istio.io/v1alpha1
kind: WasmPlugin
metadata:
  name: bad-filter-config
spec:
  url: https://bad-url.wasm
  sha256: f2ca1bb6c7e907d06dafe4687e579fce76b37e4e93b7605022da52e6ccc26fd2
