tests/integration/ambient/testdata/beta-mtls-automtls-workload.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: "a-disable"
  annotations:
    test-suite: "beta-mtls-automtls-workload"
spec:
  selector:
    matchLabels:
      app: a
  mtls:
    mode: DISABLE
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: "b-strict"
  annotations:
    test-suite: "beta-mtls-automtls-workload"
spec:
  selector:
    matchLabels:
      app: b
  mtls:
    mode: STRICT
  portLevelMtls:
    # 8090 is the targetPort for service http port.
    8090:
      mode: DISABLE
---
