tests/integration/ambient/testdata/beta-mtls-permissive.yaml
# Global PeerAuthentication can be removed for this test, once we remove the (alpha) mesh policy
# during installation.
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: "default"
  annotations:
    test-suite: "beta-mtls-permissive"
spec:
  mtls:
    mode: PERMISSIVE
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: "default"
  annotations:
    test-suite: "beta-mtls-permissive"
spec:
  host: "*.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
