tests/integration/ambient/testdata/global-plaintext.yaml
# mTLS is disabled without destination rule.
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: "default"
  annotations:
    test-suite: "beta-mtls-off"
spec:
  mtls:
    mode: DISABLE
