tests/integration/ambient/testdata/lua-header-injector.yaml
apiVersion: extensions.istio.io/v1alpha1
kind: TrafficExtension
metadata:
  name: {{ .TrafficExtensionName }}
spec:
  phase: AUTHN
  targetRefs:
  - kind: {{ .TargetKind }}
    group: {{ .TargetGroup }}
    name: {{ .TargetName }}
  lua:
    inlineCode: |
      function envoy_on_response(response_handle)
        response_handle:headers():add("x-lua-injected", "true")
      end
