tests/integration/ambient/testdata/no-peer-authn.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: "default"
  annotations:
    test-suite: "no-peer-authn"
spec:
  host: "*.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
