tests/integration/ambient/testdata/plaintext-to-permissive.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  annotations:
    test-suite: plaintext-to-permissive
spec:
  mtls:
    mode: PERMISSIVE
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: default
  annotations:
    test-suite: plaintext-to-permissive
spec:
  host: "*.local"
  trafficPolicy:
    tls:
      mode: DISABLE
