tests/integration/ambient/testdata/registry-secret.yaml
apiVersion: v1
data:
  .dockerconfigjson: { { .DockerConfigJson } }
kind: Secret
metadata:
  name: reg-cred
type: kubernetes.io/dockerconfigjson
