tests/integration/ambient/testdata/trafficextension-wasm.yaml
apiVersion: extensions.istio.io/v1alpha1
kind: TrafficExtension
metadata:
  name: {{ .TrafficExtensionName }}
  {{- if .FilterVersion }}
  annotations:
    filterVersion: {{ .FilterVersion }}
  {{- end }}
spec:
  phase: STATS
  targetRefs:
  - kind: {{ .TargetKind }}
    group: {{ .TargetGroup }}
    name: {{ .TargetName }}
  wasm:
    {{- if .TestWasmModuleURL }}
    url: {{ .TestWasmModuleURL }}
    {{- end }}
    imagePullSecret: reg-cred
    {{- if .ImagePullPolicy }}
    imagePullPolicy: {{ .ImagePullPolicy }}
    {{- end }}
