tests/integration/ambient/testdata/wasm-filter-service.yaml
apiVersion: extensions.istio.io/v1alpha1
kind: WasmPlugin
metadata:
  name: {{ .WasmPluginName }}
  {{- if .WasmPluginVersion }}
  annotations:
    wasmPluginVersion: {{ .WasmPluginVersion }}
  {{- end }}
spec:
  phase: STATS
  targetRef:
    kind: Service
    group: ""
    name: {{ .TargetServiceName }}
  {{- if .TestWasmModuleURL }}
  url: {{ .TestWasmModuleURL }}
  {{- end }}
  imagePullSecret: reg-cred
  {{- if .ImagePullPolicy }}
  imagePullPolicy: {{ .ImagePullPolicy }}
  {{- end }}
